Fixing invalid viewport on mobile

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -10,7 +10,7 @@
   -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
   box-sizing: border-box;
-  min-height: (var(--vh, 1vh) * 100);
+  min-height: calc(var(--vh, 1vh) * 100);
 }
 
 ::-webkit-scrollbar {
